--- a/.pre-commit-config.yml
+++ b/.pre-commit-config.yml
@@ -8,7 +8,7 @@ repos:
       - id: end-of-file-fixer
       - id: trailing-whitespace
   - repo: https://github.com/dnephin/pre-commit-golang
-    rev: master
+    rev: v0.5.1
     hooks:
       - id: go-fmt
       - id: go-vet
